--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script src="index.js"></script>
   </head>
   <body>
-    <header> Here's Some News and Stuff </header>
+    <header><p>Josiah's News</p></header>
+    <div id="content">
+    </div>
   </body>
 </html>
